Add footer and moviedb logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Movie site</title>
 </head>
 <body>
-    
+    <footer>
+        <object data="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" type="image/svg+xml"></object>
+    </footer>
 </body>
 </html>
