Can fetch data from api

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Movie site</title>
 </head>
 <body>
+    <main>
+        <section id="movieList">
+
+        </section>
+    </main>
     <footer>
         <object data="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" type="image/svg+xml"></object>
     </footer>
 </body>
+<script src="scripts/const.js"></script>
+<script src="scripts/fetch_latest.js"></script>
 </html>
